# minecraft-clone

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
lib/: glfw3.lib
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: glad.c  main.cpp
